@@ -1,1 +1,3 @@
 "# Sea-Battle" 
+Прописать следующие настройки - Run - Edit configurations - Modify options - Add VM options:
+--module-path "Полный путь к JavaFX" --add-modules javafx.controls,javafx.fxml
